configurations/cilium/phase2/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: ingress
    sectionName: https
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - hubble.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
      weight: 1
      kind: Service
